--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-appearance": "^0.3.3",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "0.13.0",
+    "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
