--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "expo": "~37.0.3",
+    "expo-ads-admob": "~8.1.0",
     "expo-facebook": "~8.1.0",
     "moment": "*",
     "react": "~16.9.0",
