--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^5.5.0",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-ads-admob": "~8.1.0",
     "expo-facebook": "~8.1.0",
