--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@react-navigation/drawer": "^5.5.0",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
-    "axios": "^0.19.2",
+    "axios": "0.18.0",
     "expo": "~37.0.3",
     "expo-ads-admob": "~8.1.0",
     "expo-facebook": "~8.1.0",
+    "expo-image-picker": "^9.1.1",
     "moment": "*",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-appearance": "^0.3.3",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "0.13.0",
     "react-native-paper": "^3.8.0",
