--- a/app.json
+++ b/app.json
@@ -2,7 +2,11 @@
   "expo": {
     "name": "Chevy Chabot",
     "slug": "Chevy",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -14,7 +18,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "android": {
       "package": "com.knowledge.chevy",
       "versionCode": 1,
