--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "expo": "~37.0.3",
     "expo-ads-admob": "~8.1.0",
     "expo-facebook": "~8.1.0",
-    "expo-image-picker": "^9.1.1",
     "moment": "*",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -34,6 +33,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
