--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "release": "standard-version"
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
@@ -38,7 +39,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "standard-version": "^9.0.0"
   },
   "private": true
 }
