--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
   "expo": {
     "name": "Chevy Chabot",
-    "slug": "Chevy",
-    "platforms": ["ios", "android", "web"],
+    "slug": "chevy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "description": "The Chevy Chatbot aims to provide users with the possibility of conducting dialogues in English where the conversations and answers are registered and evaluated by the users themselves.",
+    "githubUrl": "https://github.com/knowledge-corporation/chevy-chatbot",
+    "platforms": ["ios", "android", "web"],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -15,20 +17,19 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": ["**/*"],
+    "ios": {
+      "supportsTablet": true
+    },
     "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
       "package": "com.knowledge.chevy",
       "versionCode": 1,
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-8494738329887200~4318815237"
       }
-    },
-    "ios": {
-      "supportsTablet": true,
-      "config": {
-        "googleMobileAdsAppId": "ca-app-pub-8494738329887200~4318815237"
-      }
-    },
-    "description": "The Chevy Chatbot aims to provide users with the possibility of conducting dialogues in English where the conversations and answers are registered and evaluated by the users themselves.",
-    "githubUrl": "https://github.com/knowledge-corporation/chevy-chatbot"
+    }
   }
 }
