--- a/package.json
+++ b/package.json
@@ -12,34 +12,33 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
     "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/drawer": "^5.5.0",
-    "@react-navigation/native": "^5.1.6",
-    "@react-navigation/stack": "^5.2.13",
-    "axios": "0.18.0",
-    "expo": "~37.0.3",
-    "expo-ads-admob": "~8.1.0",
-    "expo-facebook": "~8.1.0",
-    "moment": "*",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-appearance": "^0.3.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "@unimodules/core": "^5.5.1",
+    "axios": "^0.18.0",
+    "dayjs": "^1.9.6",
+    "expo": "~39.0.2",
+    "expo-ads-admob": "^8.3.0",
+    "expo-facebook": "^9.0.0",
+    "expo-status-bar": "~1.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-gifted-chat": "0.13.0",
-    "react-native-paper": "^3.8.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-paper": "^4.4.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0",
+    "@babel/core": "~7.9.0",
     "standard-version": "^9.0.0"
   },
   "private": true
