fix: fix int bug

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-ads-admob": "^8.3.0",
     "expo-facebook": "^9.0.0",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
