--- a/app.json
+++ b/app.json
@@ -5,9 +5,13 @@
     "version": "1.0.5",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "description": "The Chevy Chatbot aims to provide users with the possibility of conducting dialogues in English where the conversations and answers are registered and evaluated by the users themselves.",
+    "description": "The Chevy Chatbot aims to provide users with the possibility of conducting dialogues in English where the conversations and answers are registered and evaluated by the users themselves.\nhttps://play.google.com/store/apps/details?id=com.knowledge.chevy",
     "githubUrl": "https://github.com/knowledge-corporation/chevy-chatbot",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -16,7 +20,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -29,7 +35,7 @@
       "package": "com.knowledge.chevy",
       "versionCode": 7,
       "config": {
-        "googleMobileAdsAppId": "ca-app-pub-8494738329887200~4318815237"
+        "googleMobileAdsAppId": "ca-app-pub-4790228310824010~7690791136"
       }
     }
   }
